crates/solite-fmt/src/snapshots/solite_fmt__tests__update_simple.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- update t set a = 1

-- Output:
update t
set
  a = 1;
