crates/solite-fmt/src/snapshots/solite_fmt__tests__update_with_returning.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- update t set a = 1 where id = 5 returning *

-- Output:
update t
set
  a = 1
where id = 5
returning *;
