crates/solite-fmt/src/snapshots/solite_fmt__tests__update_with_where.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- update t set a = 1, b = 2 where id = 5

-- Output:
update t
set
  a = 1,
  b = 2
where id = 5;
