crates/solite-fmt/src/snapshots/solite_fmt__tests__vacuum.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- vacuum

-- Output:
vacuum;
