crates/solite-fmt/src/snapshots/solite_fmt__tests__vacuum_into.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- vacuum into 'backup.db'

-- Output:
vacuum into 'backup.db';
